/*
 * $Id: ChangeLog,v 1.4959 2006/04/26 02:19:58 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-04-26 08:31 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/tget.prg
    * Fixed get clear for "##,###.##" pictures.

2006-04-25 19:18 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * utils/xbscript/xbscript.prg
    * Synched PCODE version with recent TRY/CATCH/FINALLY changes
  * source/vm/hvm.c
    * Spelling typos in 2 comments
    * Missing condition on bCanRetry where it may have been recovered already.

2006-04-25 13:17 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbclass.ch
    * Typo in recent commit for DESTRUCTOR.

2006-04-25 12:35 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * utils/xbscript/xbscript.prg
    * Corrected possible RTL in PCodeProlog()
  * source/vm/hvm.c
    * Compiler warning

2006-04-25 12:28 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbclass.ch
    * Removed redundant older rule for DESTRUCTOR ... -> METHOD ...
    * Refined rule for DESTRUCTOR ... to allow both variation of () or missing ()

2006-04-24 23:28 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbclass.ch
    * Correction to recently added InitClass

2006-04-24 22:31 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * utils/xbscript/xbscript.prg
    * Silly typo in NextExp() that caused bug in parsing ((...)) expressions

2006-04-24 15:23 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbclass.ch
    * Fixed typos related to CLASSMETHOD
    + Added few #untranslate to allow recycling of per class rules.
    + Added support for :InitClass()
  * source/rtl/tclass.prg
    - Removed TODO and partial code for :InitClass()

  * source/common/reserved.c
    + Added "THROW"

  * source/compiler/harbour.slx
    + Added missing case for "CATCH"
