@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4959 2006/04/26 02:19:58 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.4960 2006/04/26 13:38:32 guerra000 Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-04-26 10:31 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
+  * source/vm/hvm.c
+    * Minor cleanup related to TRY/CATCH/FINALLY
 
 2006-04-26 08:31 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
   * source/rtl/tget.prg
